--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@types/fast-levenshtein": "0.0.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "d3": "^6.5.0",
     "d3-zoom": "^2.0.0",
+    "electron-json-storage": "^4.4.0",
     "fast-levenshtein": "^3.0.0",
+    "is-electron": "^2.2.0",
+    "node-localstorage": "^2.1.6",
     "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
     "tsne-js": "^1.0.3",
