--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "electron-json-storage": "^4.4.0",
     "fast-levenshtein": "^3.0.0",
     "is-electron": "^2.2.0",
+    "netv": "^1.1.2",
     "node-localstorage": "^2.1.6",
     "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
+    "stardust-core": "^0.2.4",
+    "stardust-webgl": "^0.2.4",
     "store2": "^2.12.0",
     "tsne-js": "^1.0.3",
     "vue": "^2.6.11",
