--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "d3": "^6.5.0",
     "d3-zoom": "^2.0.0",
+    "density-clustering": "^1.3.0",
     "electron-json-storage": "^4.4.0",
     "fast-levenshtein": "^3.0.0",
     "is-electron": "^2.2.0",
