--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-zoom": "^2.0.0",
     "density-clustering": "^1.3.0",
     "electron-json-storage": "^4.4.0",
+    "electron-store": "^7.0.2",
     "fast-levenshtein": "^3.0.0",
     "is-electron": "^2.2.0",
     "netv": "^1.1.2",
