--- a/package.json
+++ b/package.json
@@ -27,14 +27,20 @@
     "is-electron": "^2.2.0",
     "netv": "^1.1.2",
     "node-localstorage": "^2.1.6",
+    "promise-worker": "^2.0.1",
     "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
+    "simple-web-worker": "^1.2.0",
     "stardust-core": "^0.2.4",
     "stardust-webgl": "^0.2.4",
     "store2": "^2.12.0",
+    "threads": "^1.6.3",
+    "tiny-worker": "^2.3.0",
     "tsne-js": "^1.0.3",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vue-worker": "^1.2.1",
+    "vuetify": "^2.4.0",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
