--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "netv": "^1.1.2",
     "node-localstorage": "^2.1.6",
     "promise-worker": "^2.0.1",
+    "random": "^3.0.3",
+    "random-seed": "^0.3.0",
     "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
     "simple-web-worker": "^1.2.0",
