--- a/package.json
+++ b/package.json
@@ -25,24 +25,30 @@
     "electron-store": "^7.0.2",
     "fast-levenshtein": "^3.0.0",
     "is-electron": "^2.2.0",
+    "jquery.complexify": "^0.5.2",
     "netv": "^1.1.2",
     "node-localstorage": "^2.1.6",
+    "owasp-password-strength-test": "^1.3.0",
+    "passwdqc": "^1.0.2",
     "promise-worker": "^2.0.1",
     "random": "^3.0.3",
     "random-seed": "^0.3.0",
     "raw-loader": "^4.0.2",
     "roboto-fontface": "*",
+    "save-file": "^2.3.1",
     "simple-web-worker": "^1.2.0",
     "stardust-core": "^0.2.4",
     "stardust-webgl": "^0.2.4",
     "store2": "^2.12.0",
     "threads": "^1.6.3",
     "tiny-worker": "^2.3.0",
+    "tinygradient": "^1.1.3",
     "tsne-js": "^1.0.3",
     "vue": "^2.6.11",
     "vue-worker": "^1.2.1",
     "vuetify": "^2.4.0",
-    "worker-loader": "^3.0.8"
+    "worker-loader": "^3.0.8",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
