added more options in generate menu

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@d3fc/d3fc-webgl": "^3.1.0",
     "@mdi/font": "^5.9.55",
     "@simonwep/selection-js": "^2.0.1",
     "@types/fast-levenshtein": "0.0.1",
