added lots of documentation and changed logo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-electron-password-universe",
-  "version": "0.1.0",
+  "name": "password-universe",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
